--- a/apps/templates/navbar.html
+++ b/apps/templates/navbar.html
@@ -1,17 +1,22 @@
-{% block body %}
-
-<nav class="navbar navbar-default" style="background-color: rgba(255, 26, 26, 0.7); padding-top: 20px; padding-bottom: 20px; margin-bottom: 20px; ">
-    <div class="container-fluid">
-        <div class="navbar-header">
-            <a class="navbar-brand" href="#">Bank Marah</a>
-        </div>
-        <ul class="nav navbar-nav">
-            <li class="active"><a href="#">Home</a></li>
-            <li><a href="#">Page 1</a></li>
-            <li><a href="#">Page 2</a></li>
-            <li><a href="#">Page 3</a></li>
-        </ul>
-    </div>
+<!-- top nav -->
+<nav class="navbar navbar-inverse navbar-fixed-top navbar-custom navbar-custom" id="startchange" style="padding:11px;">
+	<div class="container-fluid">
+	    <div class="navbar-header">
+	      <a class="navbar-brand" href="#">Bank Marah</a>
+	    </div>
+	    <ul class="nav navbar-nav">
+	      <li {% if request.path == '/' %}class="active"{%endif%}><a href="/">Home</a></li>
+	      <li {% if request.path == '#' %}class="active"{%endif%}><a href="#">Timeline</a></li>
+	      <li><a href="#">Quotes</a></li>
+	    </ul>
+	    <ul class="nav navbar-nav navbar-right">
+	    	<li class="dropdown">
+	    		<a class="dropdown-toggle" data-toggle="dropdown" href="#"><span class="glyphicon glyphicon-user"></span></a>
+	    		<ul class="dropdown-menu">
+	    			<li><a href="/logout/">Logout</a></li>
+	    		</ul>
+	    	</li>
+	    </ul>
+	</div>
 </nav>
-
-{% endblock %}
+<!-- /top nav -->
